2007-08-07  Michal Nazarewicz  <mina86/AT/mina86.com>

	* genpass.sh: + accepts one argument -- password length
	+ uses pipes instead of $(...) (new lines are not stripped now)

	* getlyrics.pl: + added audacious support
	+ added cache support

2007-06-30  Michal Nazarewicz  <mina86/AT/mina86.com>

	* libmpdclient.c, libmpdclient.h: + updated to 0.13.0
	* FvwmTransFocus.c, infinite-logger.c, load.c, mpd-state.c,
	null.c, timer.c: + fixed some compatibility problems and cleaned code

2007-05-18  Michal Nazarewicz  <mina86/AT/mina86.com>

	* malloc.c: + checks number of arguments
	+ now ANSI C compatible

	* Makefile: + added -Wall switch to compile commands

	* getlyrics.pl: + added message when tool is about to download lytics

	* tuptime.c: + accepts -b and -u arguments for giving files location
	+ -p option removed
	+ now ANSI C compatible

2007-03-13  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mkpkg: + small fixes

	* quotes: + small clean up

2007-01-31  Michal Nazarewicz  <mina86/AT/mina86.com>

	* gz2bz: + interactive mode and more descriptive messages

2006-12-18  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes: + a few new quotes
	+ author lines reformatted (ie. [attrib.] at the end instead of
	"Attributed to" at the beginning)

	* installkernel: + better way of checking version number
	* installkernel.8: + note on need to modify
	include/linux/version.h removed

2006-11-27  Michal Nazarewicz  <mina86/AT/mina86.com>

	* inplace: New file

2006-10-06  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tuptime.c: + %lf -> %f in printf

	* cutcom.c: + rebuild - states defined in constants not in code

	* tuptime.c: + conforming to C89 (I hope)
	* xgetclass.c: + conforming to C89 (I hope)

	* pingrange.pl: + more address range formats added
	+ can specify several ranges

	* mpd-show.c: + name->state was not changed after error
	+ DEFAULT_FORMAT altered

	* tv: + downloads programm for only one day instead of two
